fixed spacing and alignment on about us page

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -235,7 +235,7 @@ article footer.page__meta {
 .about-us h1 {
   font-weight: 400;
   font-size: 2em;
-  margin: 1em;
+  margin-bottom: 1em;
 }
 
 .about-us table {
